--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,20 @@
 
     <com.aids61517.easyratingview.EasyRatingView
         android:id="@+id/ratingView"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         app:emptyDrawable="@drawable/ic_review_empty_small"
         app:fullDrawable="@drawable/ic_review_full_small"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:maxRating="10"
-        app:numStars="5"
-        app:rating="6"
+        app:numStars="10"
+        app:rating="7.5"
         app:spacing="10dp"
-        app:step="0.5" />
+        app:step="0.5"
+        app:verticalSpacing="10dp" />
 
     <LinearLayout
         android:id="@+id/ratingContainer"
